--- a/package.json
+++ b/package.json
@@ -185,9 +185,9 @@
     "tc-ui-toolkit": "0.14.21",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.5",
-    "usfm-js": "2.0.1",
+    "usfm-js": "github:translationCoreApps/usfm-js#bugfix-mcleanb-6050",
     "uuid": "3.2.1",
-    "word-aligner": "0.2.14",
+    "word-aligner": "github:translationCoreApps/word-aligner#bugfix-mcleanb-6050",
     "wordmap": "0.4.3",
     "wordmap-lexer": "0.3.4",
     "xregexp": "3.2.0",
