--- a/package.json
+++ b/package.json
@@ -179,7 +179,7 @@
     "simple-git": "1.43.0",
     "string-punctuation-tokenizer": "0.9.4",
     "sudo-prompt": "6.2.1",
-    "tc-source-content-updater": "github:translationCoreApps/tc-source-content-updater#bugfix-mcleanb-6145",
+    "tc-source-content-updater": "0.6.4",
     "tc-strings": "0.1.7",
     "tc-tool": "2.1.0",
     "tc-ui-toolkit": "0.14.24",
