--- a/package.json
+++ b/package.json
@@ -127,7 +127,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
-    "checking-tool-wrapper": "github:translationCoreApps/checking-tool-wrapper#bugfix-mcleanb-6193",
+    "checking-tool-wrapper": "0.4.27",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
@@ -182,7 +182,7 @@
     "tc-source-content-updater": "0.6.7",
     "tc-strings": "0.1.7",
     "tc-tool": "2.1.0",
-    "tc-ui-toolkit": "github:translationCoreApps/tc-ui-toolkit#bugfix-mcleanb-6193",
+    "tc-ui-toolkit": "0.14.26",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.7",
     "usfm-js": "2.0.2",
