--- a/package.json
+++ b/package.json
@@ -184,7 +184,7 @@
     "tc-source-content-updater": "0.6.11",
     "tc-strings": "0.1.7",
     "tc-tool": "2.2.0",
-    "tc-ui-toolkit": "github:translationCoreApps/tc-ui-toolkit#feature-mcleanb-3579",
+    "tc-ui-toolkit": "github:translationCoreApps/tc-ui-toolkit#feature-mcleanb-3579.noCursor",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.11",
     "usfm-js": "2.0.2",
