--- a/.babelrc
+++ b/.babelrc
@@ -1,29 +1,14 @@
 {
   "presets": [
-    [
-      "env",
-      {
-        "targets": {
-          "node": "current"
-        }
-      }
-    ],
-    "es2015",
-    "react"
+    "@babel/react",
+    "@babel/env"
   ],
   "plugins": [
-    [
-      "transform-runtime", {
-        "polyfill": false,
-        "regenerator": true
-      },
-      "transform-class-properties",
-      "transform-object-rest-spread",
-      "transform-decorators-legacy",
-      "jest-hoist",
-      {
-        "useBuiltIns": true
-      }
-    ]
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-transform-async-to-generator",
+    "jest-hoist",
+    ["@babel/plugin-proposal-decorators", { "legacy": true }]
   ]
 }
