--- a/package.json
+++ b/package.json
@@ -74,9 +74,10 @@
   },
   "homepage": "https://github.com/unfoldingWord-dev/translationCore#readme",
   "devDependencies": {
-    "babel-cli": "6.26.0",
+    "@babel/cli": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
-    "babel-jest": "21.2.0",
+    "babel-jest": "^23.4.2",
     "bluebird": "3.5.1",
     "codecov": "3.0.2",
     "cross-env": "5.1.6",
@@ -98,8 +99,8 @@
     "glob": "7.1.3",
     "gulp": "4.0.0",
     "gulp-change": "1.0.0",
-    "jest": "21.2.1",
-    "jest-enzyme": "4.2.0",
+    "jest": "24.9.0",
+    "jest-enzyme": "7.1.0",
     "jest-serializer-path": "^0.1.15",
     "jsdoc": "3.5.5",
     "ncp": "2.0.0",
@@ -116,6 +117,15 @@
     "yargs": "10.0.3"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-async-to-generator": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "@material-ui/core": "3.8.3",
     "@material-ui/icons": "3.0.2",
     "@neutrinog/electron-dl": "1.11.1",
@@ -125,15 +135,6 @@
     "archiver": "3.0.0",
     "axios": "0.18.0",
     "babel-plugin-jest-hoist": "21.2.0",
-    "babel-plugin-transform-async-to-generator": "6.24.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
     "checking-tool-wrapper": "0.4.36",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
