--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
-    "checking-tool-wrapper": "0.4.37",
+    "checking-tool-wrapper": "github:translationCoreApps/checking-tool-wrapper#bugfix-mcleanb-6421",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
