--- a/package.json
+++ b/package.json
@@ -74,10 +74,9 @@
   },
   "homepage": "https://github.com/unfoldingWord-dev/translationCore#readme",
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^23.4.2",
+    "babel-cli": "6.26.0",
+    "babel-eslint": "10.0.3",
+    "babel-jest": "23.4.2",
     "bluebird": "3.5.1",
     "codecov": "3.0.2",
     "cross-env": "5.1.6",
@@ -88,13 +87,13 @@
     "electron-react-devtools": "0.5.3",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
-    "eslint": "^6.3.0",
-    "eslint-config-prettier": "^6.2.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.16.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^2.0.1",
+    "eslint": "6.3.0",
+    "eslint-config-prettier": "6.3.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jest": "22.17.0",
+    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-react-hooks": "2.0.1",
     "fetch-mock": "5.13.1",
     "glob": "7.1.3",
     "gulp": "4.0.0",
@@ -104,7 +103,7 @@
     "jest-serializer-path": "^0.1.15",
     "jsdoc": "3.5.5",
     "ncp": "2.0.0",
-    "prettier": "^1.18.2",
+    "prettier": "1.18.2",
     "react-addons-test-utils": "15.6.2",
     "react-test-renderer": "16.8.1",
     "redux-jest": "1.1.1",
@@ -117,15 +116,6 @@
     "yargs": "10.0.3"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-async-to-generator": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
     "@material-ui/core": "3.8.3",
     "@material-ui/icons": "3.0.2",
     "@neutrinog/electron-dl": "1.11.1",
@@ -135,6 +125,15 @@
     "archiver": "3.0.0",
     "axios": "0.18.0",
     "babel-plugin-jest-hoist": "21.2.0",
+    "babel-plugin-transform-async-to-generator": "6.24.1",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.5",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
     "checking-tool-wrapper": "0.4.37",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
