--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-eslint": "8.2.2",
-    "babel-jest": "^21.2.0",
+    "babel-jest": "21.2.0",
     "bluebird": "3.5.1",
     "codecov": "3.0.2",
     "cross-env": "5.1.6",
@@ -127,7 +127,7 @@
     "babel-plugin-jest-hoist": "21.2.0",
     "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.5",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-polyfill": "6.26.0",
