--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "eslint": "6.3.0",
     "eslint-config-prettier": "6.3.0",
     "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jest": "22.17.0",
+    "eslint-plugin-jest": "^22.1.2",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "2.0.1",
@@ -98,8 +98,8 @@
     "glob": "7.1.3",
     "gulp": "4.0.0",
     "gulp-change": "1.0.0",
-    "jest": "24.9.0",
-    "jest-enzyme": "7.1.0",
+    "jest": "^21.2.1",
+    "jest-enzyme": "^4.2.0",
     "jest-serializer-path": "^0.1.15",
     "jsdoc": "3.5.5",
     "ncp": "2.0.0",
