--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
   "homepage": "https://github.com/unfoldingWord-dev/translationCore#readme",
   "devDependencies": {
     "babel-cli": "6.26.0",
-    "babel-eslint": "8.2.2",
+    "babel-eslint": "^10.0.3",
     "babel-jest": "21.2.0",
     "bluebird": "3.5.1",
     "codecov": "3.0.2",
@@ -90,7 +90,7 @@
     "eslint": "6.3.0",
     "eslint-config-prettier": "6.3.0",
     "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jest": "^22.1.2",
+    "eslint-plugin-jest": "22.1.2",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "2.0.1",
@@ -98,8 +98,8 @@
     "glob": "7.1.3",
     "gulp": "4.0.0",
     "gulp-change": "1.0.0",
-    "jest": "^21.2.1",
-    "jest-enzyme": "^4.2.0",
+    "jest": "^23.6.0",
+    "jest-enzyme": "^7.1.1",
     "jest-serializer-path": "^0.1.15",
     "jsdoc": "3.5.5",
     "ncp": "2.0.0",
