--- a/package.json
+++ b/package.json
@@ -98,8 +98,8 @@
     "glob": "7.1.3",
     "gulp": "4.0.0",
     "gulp-change": "1.0.0",
-    "jest": "^23.6.0",
-    "jest-enzyme": "^7.1.1",
+    "jest": "23.6.0",
+    "jest-enzyme": "7.1.1",
     "jest-serializer-path": "^0.1.15",
     "jsdoc": "3.5.5",
     "ncp": "2.0.0",
@@ -127,7 +127,7 @@
     "babel-plugin-jest-hoist": "21.2.0",
     "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-decorators-legacy": "1.3.5",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-polyfill": "6.26.0",
