--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "test": "eslint ./src && jest --logHeapUsage --runInBand",
-    "ci-test": "eslint ./src && jest --logHeapUsage --runInBand --coverage",
+    "ci-test": "eslint ./src && jest --logHeapUsage --runInBand --detectLeaks --coverage",
     "release-osx": "npm i && gulp clean && npm i && npm run load-apps && gulp build --osx && gulp release --osx",
     "coverage": "jest --coverage",
     "load-apps": "git submodule update --init --recursive",
