--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "npm-clean-up": "rm -rf node_modules/ && rm -rf tC_apps/*/node_modules && rm package-lock.json && npm i",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
-    "test": "eslint ./src && jest",
-    "test2": "jest UsfmFileConversionHelpers2",
-    "ci-test": "eslint ./src && jest --coverage",
+    "test": "eslint ./src && node --max-old-space-size=3072 ./node_modules/jest/bin/jest --logHeapUsage",
+    "test2": "jest --logHeapUsage --expose-gc --runInBand --detectLeaks LexiconHelpers",
+    "ci-test": "eslint ./src && node --max-old-space-size=3072 ./node_modules/jest/bin/jest --logHeapUsage --runInBand --coverage",
     "release-osx": "npm i && gulp clean && npm i && npm run load-apps && gulp build --osx && gulp release --osx",
     "coverage": "jest --coverage",
     "load-apps": "git submodule update --init --recursive",
