--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "npm-clean-up": "rm -rf node_modules/ && rm -rf tC_apps/*/node_modules && rm package-lock.json && npm i",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
-    "test": "eslint ./src && jest",
-    "ci-test": "eslint ./src && jest --coverage",
+    "test": "eslint ./src && jest --version && jest",
+    "ci-test": "eslint ./src && jest --version && jest --coverage",
     "release-osx": "npm i && gulp clean && npm i && npm run load-apps && gulp build --osx && gulp release --osx",
     "coverage": "jest --coverage",
     "load-apps": "git submodule update --init --recursive",
