--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "npm-clean-up": "rm -rf node_modules/ && rm -rf tC_apps/*/node_modules && rm package-lock.json && npm i",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
-    "test": "eslint ./src && jest --version && jest",
-    "ci-test": "eslint ./src && jest --version && jest --coverage",
+    "test": "jest --version && jest",
+    "ci-test": "jest --version && jest --coverage",
     "release-osx": "npm i && gulp clean && npm i && npm run load-apps && gulp build --osx && gulp release --osx",
     "coverage": "jest --coverage",
     "load-apps": "git submodule update --init --recursive",
@@ -75,7 +75,7 @@
   "homepage": "https://github.com/unfoldingWord-dev/translationCore#readme",
   "devDependencies": {
     "babel-cli": "6.26.0",
-    "babel-eslint": "10.0.3",
+    "babel-eslint": "8.2.2",
     "babel-jest": "21.2.0",
     "bluebird": "3.5.1",
     "codecov": "3.0.2",
@@ -87,13 +87,9 @@
     "electron-react-devtools": "0.5.3",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
-    "eslint": "6.3.0",
-    "eslint-config-prettier": "6.3.0",
-    "eslint-plugin-import": "2.18.2",
+    "eslint": "5.9.0",
     "eslint-plugin-jest": "22.1.2",
-    "eslint-plugin-prettier": "3.1.0",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "2.0.1",
+    "eslint-plugin-react": "7.7.0",
     "fetch-mock": "5.13.1",
     "glob": "7.1.3",
     "gulp": "4.0.0",
@@ -103,7 +99,7 @@
     "jest-serializer-path": "^0.1.15",
     "jsdoc": "3.5.5",
     "ncp": "2.0.0",
-    "prettier": "1.18.2",
+    "prettier": "1.8.2",
     "react-addons-test-utils": "15.6.2",
     "react-test-renderer": "16.8.1",
     "redux-jest": "1.1.1",
@@ -127,11 +123,11 @@
     "babel-plugin-jest-hoist": "21.2.0",
     "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.5",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.7.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "checking-tool-wrapper": "0.4.35",
@@ -164,7 +160,7 @@
     "react-dnd": "2.5.4",
     "react-dnd-html5-backend": "2.5.4",
     "react-dom": "16.8.6",
-    "react-localize-redux": "3.5.3",
+    "react-localize-redux": "2.15.1",
     "react-redux": "5.1.1",
     "react-remarkable": "1.1.3",
     "react-select": "1.2.0",
