--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 sudo: true
 language: node_js
 node_js:
-  - 8
+  - 8.16.1
 os:
   - linux
 before_install:
-  - npm i -g npm@6.4.1 jest@23.6.0 codecov@3.0.2
+  - npm i -g npm@6.4.1 jest codecov
   - npm --version
 install:
   - npm ci
