--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "jest-serializer-path": "^0.1.15",
     "jsdoc": "3.5.5",
     "ncp": "2.0.0",
-    "prettier": "1.8.2",
+    "prettier": "1.18.2",
     "react-addons-test-utils": "15.6.2",
     "react-test-renderer": "16.8.1",
     "redux-jest": "1.1.1",
@@ -127,7 +127,7 @@
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-polyfill": "6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "checking-tool-wrapper": "0.5.1",
