--- a/package.json
+++ b/package.json
@@ -87,9 +87,13 @@
     "electron-react-devtools": "0.5.3",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
-    "eslint": "5.9.0",
+    "eslint": "6.3.0",
+    "eslint-config-prettier": "6.3.0",
+    "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jest": "22.1.2",
-    "eslint-plugin-react": "7.7.0",
+    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-react-hooks": "2.0.1",
     "fetch-mock": "5.13.1",
     "glob": "7.1.3",
     "gulp": "4.0.0",
