--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
   "homepage": "https://github.com/unfoldingWord-dev/translationCore#readme",
   "devDependencies": {
     "babel-cli": "6.26.0",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "9.0.0",
     "babel-jest": "24.9.0",
     "bluebird": "3.5.1",
     "codecov": "3.0.2",
