--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - uses: .github/actions/build
+    - uses: ./.github/actions/build
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
