--- a/package.json
+++ b/package.json
@@ -186,12 +186,12 @@
     "simple-git": "1.43.0",
     "string-punctuation-tokenizer": "0.9.4",
     "sudo-prompt": "6.2.1",
-    "tc-source-content-updater": "0.6.11",
+    "tc-source-content-updater": "0.6.12-beta",
     "tc-strings": "0.1.7",
     "tc-tool": "3.0.2",
     "tc-ui-toolkit": "0.15.5",
     "truncate-utf8-bytes": "1.0.2",
-    "tsv-groupdata-parser": "github:unfoldingWord/tsv-groupdata-parser#bugfix-mcleanb-6559",
+    "tsv-groupdata-parser": "0.9.12-beta",
     "usfm-js": "2.0.2",
     "uuid": "3.2.1",
     "word-aligner": "0.2.15",
