--- a/package.json
+++ b/package.json
@@ -188,7 +188,7 @@
     "sudo-prompt": "6.2.1",
     "tc-source-content-updater": "0.6.12",
     "tc-strings": "0.1.7",
-    "tc-tool": "3.0.2",
+    "tc-tool": "3.0.3-beta",
     "tc-ui-toolkit": "0.15.6",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.12",
