--- a/package.json
+++ b/package.json
@@ -134,7 +134,7 @@
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
-    "checking-tool-wrapper": "1.0.8",
+    "checking-tool-wrapper": "1.0.9-beta",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
@@ -189,7 +189,7 @@
     "tc-source-content-updater": "0.6.13",
     "tc-strings": "0.1.7",
     "tc-tool": "3.0.3",
-    "tc-ui-toolkit": "0.15.6",
+    "tc-ui-toolkit": "0.15.7-beta",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.13",
     "usfm-js": "2.0.2",
