--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - uses: docker://hub.docker.com/r/neutrinog/concourse-tasks
+    - uses: ./.github/actions/build
       with:
         run: |
           npm ci
