--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "main": "main.js",
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "build": "yarn react-build && copyfiles package.json build/ && yarn electron-build",
+    "build": "npm run react-build && copyfiles package.json build/ && npm run electron-build",
     "electron-start": "electron .",
     "electron-build": "electron-packager ./build --out=dist",
     "react-start": "craco start",
     "react-build": "craco build",
-    "start": "concurrently \"yarn react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development yarn electron-start\"",
+    "start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development npm run electron-start\"",
     "storybook": "start-storybook -p 9001 -c .storybook",
-    "test": "craco test",
+    "test": "craco test --testPathIgnorePatterns=src/tC_apps/",
+    "test-one-file": "craco test",
     "find:extra-locale": "node scripts/locale/find_extras.js src/locale/English-en_US.json src/js",
     "find:missing-locale": "node scripts/locale/find_missing.js src/locale/English-en_US.json src/js",
     "locale-key-comparison": "node ./scripts/locale_key_comparison.js",
@@ -82,7 +83,9 @@
     "gulp-change": "1.0.0",
     "ncp": "2.0.0",
     "react-addons-test-utils": "15.6.2",
+    "react-dnd-test-backend": "^10.0.2",
     "react-test-renderer": "16.8.1",
+    "redux-jest": "^1.1.1",
     "redux-mock-store": "1.3.0",
     "redux-test-utils": "0.1.3",
     "request-promise": "4.2.2",
@@ -108,6 +111,7 @@
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
+    "deep-freeze": "0.0.1",
     "dotenv": "6.2.0",
     "enzyme-to-json": "3.3.5",
     "follow-redirects": "1.2.5",
