--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 os:
   - linux
 before_install:
-  - npm i -g npm@6.14.2 jest codecov
+  - npm i -g npm@6.14.2 codecov
   - npm --version
 install:
   - npm ci
