--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "storybook": "start-storybook -p 9001 -c .storybook",
     "test": "craco test --testPathIgnorePatterns=src/tC_apps/ --logHeapUsage",
     "test-one": "craco test",
-    "ci-test": "craco test --max-old-space-size=8192 --maxWorkers=4 --watchAll --testPathIgnorePatterns=src/tC_apps/ --coverage --logHeapUsage",
+    "ci-test": "craco test --max-old-space-size=8192 --maxWorkers=4 --testPathIgnorePatterns=src/tC_apps/ --coverage --logHeapUsage",
     "find:extra-locale": "node scripts/locale/find_extras.js src/locale/English-en_US.json src/js",
     "find:missing-locale": "node scripts/locale/find_missing.js src/locale/English-en_US.json src/js",
     "locale-key-comparison": "node ./scripts/locale_key_comparison.js",
