--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "agentkeepalive": "4.0.0",
     "archiver": "3.0.0",
     "axios": "0.19.1",
-    "checking-tool-wrapper": "4.0.2-beta",
+    "checking-tool-wrapper": "4.0.2-beta.2",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
@@ -159,7 +159,7 @@
     "tc-source-content-updater": "0.6.18",
     "tc-strings": "0.1.7",
     "tc-tool": "4.0.0",
-    "tc-ui-toolkit": "2.0.0-beta",
+    "tc-ui-toolkit": "1.0.1-beta.2",
     "truncate-utf8-bytes": "1.0.2",
     "tsv-groupdata-parser": "0.9.15",
     "usfm-js": "2.0.2",
