--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-build": "craco build",
     "start": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000/ && cross-env NODE_ENV=development npm run electron-start\"",
     "storybook": "start-storybook -p 9001 -c .storybook",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix",
     "test-one": "craco test",
-    "test": "craco test --testPathIgnorePatterns=src/tC_apps/ --logHeapUsage",
-    "ci-test": "craco test --max-old-space-size=3072 --maxWorkers=4 --testPathIgnorePatterns=src/tC_apps/ --logHeapUsage --coverage",
+    "test": "eslint ./src && craco test --testPathIgnorePatterns=src/tC_apps/ --logHeapUsage",
+    "ci-test": "eslint ./src && craco test --max-old-space-size=3072 --maxWorkers=4 --testPathIgnorePatterns=src/tC_apps/ --logHeapUsage --coverage",
     "find:extra-locale": "node scripts/locale/find_extras.js src/locale/English-en_US.json src/js",
     "find:missing-locale": "node scripts/locale/find_missing.js src/locale/English-en_US.json src/js",
     "locale-key-comparison": "node ./scripts/locale_key_comparison.js",
@@ -113,7 +115,6 @@
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
-    "deep-freeze": "0.0.1",
     "dotenv": "6.2.0",
     "enzyme-to-json": "3.3.5",
     "follow-redirects": "1.2.5",
@@ -141,7 +142,7 @@
     "react-localize-redux": "3.5.3",
     "react-redux": "5.1.1",
     "react-remarkable": "1.1.3",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.3.1",
     "react-select": "1.2.0",
     "react-spotlight-clickable": "1.0.5",
     "react-toggle": "4.0.2",
