--- a/package.json
+++ b/package.json
@@ -144,7 +144,7 @@
     "react-localize-redux": "3.5.3",
     "react-redux": "5.1.1",
     "react-remarkable": "1.1.3",
-    "react-scripts": "^3.3.1",
+    "react-scripts": "3.3.1",
     "react-select": "1.2.0",
     "react-spotlight-clickable": "1.0.5",
     "react-toggle": "4.0.2",
