--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "agentkeepalive": "4.0.0",
     "archiver": "3.0.0",
     "axios": "0.19.1",
-    "checking-tool-wrapper": "4.0.3-beta.9",
+    "checking-tool-wrapper": "4.0.3",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
