--- a/package.json
+++ b/package.json
@@ -81,12 +81,15 @@
     "electron-packager": "14.2.0",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.8.0",
+    "eslint-config-prettier": "6.10.0",
     "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-prettier": "3.1.2",
     "fetch-mock": "5.13.1",
     "glob": "7.1.3",
     "gulp": "4.0.0",
     "gulp-change": "1.0.0",
     "ncp": "2.0.0",
+    "prettier": "2.0.1",
     "react-addons-test-utils": "15.6.2",
     "react-dnd-test-backend": "10.0.2",
     "react-test-renderer": "16.8.1",
