--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "taffydb": "2.7.3",
     "temp": "0.8.3",
     "typescript": "3.7.5",
-    "wait-on": "^4.0.0",
+    "wait-on": "4.0.0",
     "webpack-cli": "^3.3.11",
     "yargs": "10.0.3"
   },
